# b2b-sales-backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  config.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  wait_for_db.py
.circleci/: config.yml
Data/: test_cases.json  token_usage.json
ai_services/: azure_openai.py  b2b_sales_agent.py  base.py  conversation_flow_manager.py  dynamic_extraction_agent.py  enhanced_b2b_sales_agent.py  factory.py  function_models.py  huggingface.py  hybrid_product_retriever_agent.py  product_retriever_agent.py  quote_generation_agent.py  sales_agent.py  token_tracker.py
alembic/: env.py
alembic/versions/: add_chat_search_index.py  add_fuzzy_search.py  fix_enum_values.py  initial_migration.py
db/: Dockerfile  database.py  models.py
db/init-scripts/: 01-create-tables.sql
models/: catalog.py  chat.py  lead.py
routes/: leads.py  quotes.py  speech.py
scripts/: init-db.sh  load_env.sh  test_chat_search.py  test_chat_tts.py  test_speech.py  wait-for-it.sh
services/: chroma_service.py  elasticsearch_service.py  pdf_generator.py  pitch_deck_generation_agent.py  speech_service.py
